[TASK-31493] Add search functionality for Participants [wip]

--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -1,5 +1,7 @@
 <h1>CodeCraft participants</h1>
 
+<%= render 'partials/search_form', url: participants_path %>
+
 <table class='table'>
   <thead class='thead-dark'>
     <tr>
