--- a/app/views/charts/_simple_column.html.erb
+++ b/app/views/charts/_simple_column.html.erb
@@ -7,13 +7,19 @@
     var chart = am4core.create("<%= chart_id %>", am4charts.XYChart);
     chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
+    // Chart Title
+    var title = chart.titles.create();
+    title.text = "No. participants";
+    title.fontSize = 20;
+    title.marginBottom = 30;
+
     // Add data from controller
     chart.data = <%= raw data.to_json %>;
 
     // horizontally
     var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
-    categoryAxis.renderer.grid.template.location = 0;
     categoryAxis.dataFields.category = "<%= value[:name] %>";
+    categoryAxis.renderer.grid.template.location = 0;
     // maleValueAxis.renderer.inversed = true;
 
     // vertically
