--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -7,14 +7,14 @@
       <span class='icon-bar'></span>
       <span class='icon-bar'></span>
       </button>
-      <%= link_to 'CodeCraft Info', root_path, :class => 'navbar-brand' %>
     </div>
 
     <div id='navbar' class='navbar-collapse collapse'>
       <ul class='nav navbar-nav'>
-        <li> <%= link_to 'Editions', editions_path,class: 'nav-item' %> </li>
-        <li> <%= link_to 'Participants', participants_path, class: 'nav-item'%> </li>
-        <li> <%= link_to 'Tasks', tasks_path, class: 'nav-item'%> </li>
+        <li class="<%= active_css_class(root_path) %>"><%= link_to 'CodeCraft Info', root_path, :class => 'navbar-brand' %></li>
+        <li class="<%= active_css_class(editions_path) %>"> <%= link_to 'Editions', editions_path, class: 'nav-item' %> </li>
+        <li class="<%= active_css_class(participants_path) %>"> <%= link_to 'Participants', participants_path, class: 'nav-item'%> </li>
+        <li class="<%= active_css_class(tasks_path) %>"> <%= link_to 'Tasks', tasks_path, class: 'nav-item'%> </li>
       </ul>
       <ul class='nav navbar-nav navbar-right'>
        <% if current_user %>
