--- a/app/views/editions/show.html.erb
+++ b/app/views/editions/show.html.erb
@@ -27,6 +27,7 @@
       <thead class='thead-dark'>
       <tr>
         <th>Username</th>
+        <th>Position</th>
         <th>Total Points</th>
         <th>Total Time</th>
       </tr>
@@ -35,6 +36,7 @@
         <% @participations.each do |participation| %>
           <tr>
             <td><%= participation.participant.username %></td>
+            <td><%= participation.participant.position_name %></td>
             <td><%= participation.total_points %></td>
             <td><%= participation.total_time %></td>
           </tr>
