[Task=31646] add search functionality for tasks

--- a/app/views/partials/_search_form.html.erb
+++ b/app/views/partials/_search_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_tag(url, :method => "get", id: "search-form") do %>
-  <div class="row no-gutter">
-    <div class="col-md-2">
+  <div class="row">
+    <div class="col-md-2 nopadding">
       <%= select_tag select_tag_id, options_for_select(select_opts), prompt: default_option,
           class: 'form-control'  %>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-3 nopadding">
       <%= text_field_tag :searched_text, params[:searched_text],
           placeholder: placeholder, class: 'form-control' %>
     </div>
