[Task-31646] send date instead of name for edition and change search form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,3 +31,12 @@
    padding: 0 !important;
    margin: 0 !important;
 }
+
+.nopadding-right {
+   padding-right: 0 !important;
+   margin: 0 !important;
+}
+
+.no-border {
+  border-radius: 0;
+}
