--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,7 +2,7 @@
   url: tasks_path,
   placeholder: 'Search for name and author',
   select_tag_id: :edition_id,
-  select_opts: @edition,
+  select_opts: @editions,
   default_option: 'Select edition'
 %>
 
