[Task-31647] add title variable in simple-column-chart

--- a/app/views/charts/_simple_column.html.erb
+++ b/app/views/charts/_simple_column.html.erb
@@ -9,7 +9,7 @@
 
     // Chart Title
     var title = chart.titles.create();
-    title.text = "No. participants";
+    title.text = "<%= value[:title] %>";
     title.fontSize = 20;
     title.marginBottom = 30;
 
