--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -6,7 +6,7 @@
 
   <div class='row'>
     <div class='col-xs-6'>
-      <%= render 'charts/simple_column', data: @participants_per_edition, chart_id: "chart_simple_column", value: { name: "name", number: "number" } %>
+      <%= render 'charts/simple_column', data: @participants_per_edition, chart_id: "chart_simple_column", value: { name: "name", number: "number", title: "No. participants" } %>
       <div id="chart_simple_column" style="width: 90%; height: 300px;"></div>
     </div>
 
