[Task-31645] remove N+1 queries, change message in edition show view

--- a/app/views/editions/show.html.erb
+++ b/app/views/editions/show.html.erb
@@ -52,7 +52,7 @@
       </table>
     <% else %>
       <br>
-      <p> Unfortunately, no results were found </p>
+      <p> No results were found. </p>
     <% end %>
   </div>
 
