[Task-31647] refactor index and show view

--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -42,7 +42,8 @@
 <div>
   <%= render 'charts/simple_column',
     data: @chart_data,
-    chart_id: "chart_simple_column_1", value: { name: "name", number: "number", title: "Edition result" }
+    chart_id: "chart_simple_column_1",
+    value: { name: "name", number: "number", title: "Edition result" }
   %>
   <div id="chart_simple_column_1" style="width: 100%; height: 300px;"></div>
 </div>
