Task 31646 - Tasks search by using its name or author(input text) or edition(select box - the list of all editions). (#21)
* [Task=31646] add search functionality for tasks

* [Task-31646] fix rubocop

* [Task-31646] send date instead of name for edition and change search form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,3 +26,17 @@
   display: inline-block;
   width: auto;
 }
+
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+}
+
+.nopadding-right {
+   padding-right: 0 !important;
+   margin: 0 !important;
+}
+
+.no-border {
+  border-radius: 0;
+}
