--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,7 +5,7 @@
   <dl class='dl-horizontal'>
     <dt>Name:       </dt> <dd><%= @task.name %></dd>
     <dt>Author:     </dt> <dd><%= @task.author %></dd>
-    <dt>Description:</dt> <dd><%= @task.description %></dd>
+    <dt>Description:</dt> <dd><%= markdown(@task.description) %></dd>
     <dt>Edition:    </dt> <dd><%= @task.edition_name %></dd>
     <dt>Test cases: </dt>
     <% if @task.test_cases.attached? %>
