--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -39,6 +39,15 @@
   </div>
 <% end %>
 
+<div>
+  <%= render 'charts/simple_column',
+    data: @chart_data,
+    chart_id: "chart_simple_column_1",
+    value: { name: "name", number: "number", title: "Edition result" }
+  %>
+  <div id="chart_simple_column_1" style="width: 100%; height: 300px;"></div>
+</div>
+
 <div class='text-center'>
   <%= will_paginate @participations, renderer: BootstrapPagination::Rails,
       :previous_label => '<<', :next_label => '>>' %>
