--- a/app/views/editions/show.html.erb
+++ b/app/views/editions/show.html.erb
@@ -33,6 +33,7 @@
       <table class='table'>
         <thead class='thead-dark'>
         <tr>
+          <th>Rank</th>
           <th>Username</th>
           <th>Position</th>
           <th>Total Points</th>
@@ -42,6 +43,7 @@
         <tbody>
           <% @participations.each do |participation| %>
             <tr>
+              <td><%= participation.rank %></td>
               <td><%= participation.participant.username %></td>
               <td><%= participation.participant.position_name %></td>
               <td><%= participation.total_points %></td>
