--- a/app/views/participants/edit.html.erb
+++ b/app/views/participants/edit.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form', participant: @participant %>
 
 <hr>
-<%= link_to 'Participant', participants_path, class: 'btn btn-primary' %>
+<%= link_to 'Participants', participants_path, class: 'btn btn-primary' %>
 <%= link_to 'Show', participant_path(@participant), class: 'btn btn-primary' %>
