Code signal profile instead of Code signal link

--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -15,7 +15,7 @@
   </div>
 
   <div class='field form-group'>
-    <%= f.label :link %><br />
+    <%= f.label :profile %><br />
     <%= f.text_field :link, class: 'form-control' %>
   </div>
 
