--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -7,7 +7,7 @@
     <dt>First Name:</dt> <dd><%= @participant.first_name %></dd>
     <dt>Last Name: </dt> <dd><%= @participant.last_name %></dd>
     <dt>Position:  </dt> <dd><%= @participant.position_name %></dd>
-    <dt>Link:      </dt> <dd><%= link_to 'Code Signal link', @participant.link, target: '_blank' %></dd>
+    <dt>Link:      </dt> <dd><%= link_to 'Code Signal profile', @participant.link, target: '_blank' %></dd>
   </dl>
 </div>
 
