--- a/app/views/charts/_simple_pie.html.erb
+++ b/app/views/charts/_simple_pie.html.erb
@@ -10,9 +10,10 @@ var chart_pie = am4core.create("<%= chart_id %>", am4charts.PieChart);
 
 // Chart Title
 var title = chart_pie.titles.create();
-title.text = "No. participants";
+title.text = "Percentage of participants by level";
 title.fontSize = 20;
 title.marginBottom = 30;
+
 
 // Add data from controller
 chart_pie.data = <%= raw data.to_json %>;
