Update first places table(custom number of first places)

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,7 +29,7 @@
   </div>
 
   <div class = 'row'>
-      <%= render 'partials/places_table', data: @first_five_places%>
-      <div id="chart_bar_chart" style="height: 900px;"></div>
+      <%= render 'partials/places_table'%>
+      <div id="first_places_per_edition_table" style="height: 900px;"></div>
   </div>
 </div>
